--- a/.github/workflows/firmware-sp-upload.yml
+++ b/.github/workflows/firmware-sp-upload.yml
@@ -77,7 +77,7 @@ jobs:
 
     - name: Call Partner API with Metadata
       run: |
-        curl -X POST https://dlcdn.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz/firmware \
+        curl -X POST https://downloads.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.zip.sha512/firmware \
           -H "Content-Type: application/json" \
           -d '{
                 "container_url": "https://${{ env.STORAGE_ACCOUNT }}.blob.core.windows.net/firmware-${{ env.CONTAINER_GUID }}",
