--- a/.github/workflows/firmware-sp-upload.yml
+++ b/.github/workflows/firmware-sp-upload.yml
@@ -2,7 +2,7 @@ name: Firmware Upload to Blob with SP
 
 on:
   push:
-     #branches: [ "main" ]
+     branches: [ "main" ]
 
 permissions:
   id-token: write
