--- a/.github/workflows/firmware-sp-upload.yml
+++ b/.github/workflows/firmware-sp-upload.yml
@@ -37,7 +37,7 @@ jobs:
         nc -zv 4.231.112.114 445
         smbclient -L //4.231.112.114
         sudo mkdir -p /mnt/share 
-        sudo mount -t cifs //4.231.112.114/Shares/test-work /mnt/share -o username=${{ secrets.SHARE_USERNAME }},password=${{ secrets.SHARE_PASSWORD }},vers=3.0
+        sudo mount -t cifs //4.231.112.114/D:/Shares/test-work /mnt/share -o username=${{ secrets.SHARE_USERNAME }},password=${{ secrets.SHARE_PASSWORD }},vers=3.0
         cp /mnt/share/php-src-php-8.1.10.tar.gz php-src-php-8.1.10.tar.gz
         sudo umount /mnt/share
 
